# Distributed-Translation-Infrastructure

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  balancer.cfg  combine-lattices.sh  default.cfg  make_centos.sh  make_debug_centos.sh  make_profile_centos.sh  make_release_centos.sh  make_release_centos_native.sh  processor.cfg  server.cfg
cfg/: balancer.cfg  client.cfg  processor.cfg  server.cfg
data/: balancer-mixed-tls.cfg  chinese_source.txt  client-mixed-tls.cfg  client-no-tls.cfg  client-tls.cfg  default-1-10.000.cfg  default-1-3.000.000.cfg  default.big.cfg  default.small.cfg  french_source.txt  german_source.nfd.txt  german_source_short.txt  processor-no-tls.cfg  processor-tls.cfg  server-1-10.000.9001.cfg  server-1-10.000.9002.cfg  server-1-10.000.9003.cfg  server-1-10.000.9004.cfg  server-1-10.000.cfg  server-1-3.000.000.cfg  server-no-tls.cfg  server-tls.cfg  tuning.info.txt
data/certificates/: ca2048.srl  client2048.crt  client2048.key  dh1024.pem  dh2048.pem  dh4096.pem  dh512.pem  generate_cert.sh  rootca.crt  rootca.key  rootca.srl  user.crt  user.csr  user.key
data/experiments/: out_c_01.txt  out_c_02.txt  out_c_03.txt  out_c_04.txt  out_c_05.txt  out_c_06.txt  out_c_07.txt  out_c_08.txt  out_c_09.c2dh.txt  out_c_09.c2dm.txt  out_c_09.c2wa.txt  out_c_09.g2dm.txt  out_c_09.h2dm.txt  out_c_09.w2ca.txt  out_c_09.w2ch.txt  out_s_01.txt  out_s_02.txt  out_small_09.c2dh.txt  out_small_09.c2dm.txt  out_small_09.c2wa.txt  out_small_09.g2dm.txt  out_small_09.h2dm.txt  out_small_09.w2ca.txt  out_small_09.w2ch.txt
data/models/: de-en-1-10.000.rm  de-en-1-10.000.tm
data/tests/: combine-lattices.sh  english_target_short.txt  french_source.txt  german_source.nfkc.txt  german_source_short.txt  german_source_short_format.txt  german_source_very_short.txt  small_test.txt
demo/no-tls/: README.md  post_process.sh  pre_process.sh  start.sh
demo/tls/: README.md  start.sh
doc/bibtex/: Koehn_SMT_Book10.bib  LinMatsumotoMihalcea_ACL11.bib~  NederhofSatta_NLP11.bib  PaulsKlein_ACL11.bib  RobenekPlatosSnasel_DATESO13.bib  Szudzik_NKS06.bib
doc/html/: ____c____make____c____compiler____id____8c__8js_8js.html  ____c____make____c____compiler____id____8c__8js_8js.js  ____c____make____c____compiler____id____8c__8js_8js_source.html  ____c____make____c____x____x____compiler____id____8cpp__8js_8js.html  ____c____make____c____x____x____compiler____id____8cpp__8js_8js.js  ____c____make____c____x____x____compiler____id____8cpp__8js_8js_source.html  ____cmd____line____8h__8js_8js.html  ____cmd____line____8h__8js_8js.js  ____i____n____i____8h__8js_8js.js  ____i____n____i____8h__8js_8js_source.html  ____standard____traits____8h__8js_8js.html  ____values____constraint____8h__8js_8js.html  ____values____constraint____8h__8js_8js.js  __arg__8h_8js.js  __c__make__c__compiler__id__8c_8js.html  __c__make__c__x__x__compiler__id__8cpp_8js.html  __c__make__c__x__x__compiler__id__8cpp_8js_source.html  __standard__traits__8h_8js.html  __values__constraint__8h_8js.js  __values__constraint__8h_8js_source.html  _arg_8h.html  _arg_8h.js  _arg_exception_8h.html  _c_make_c_x_x_compiler_id_8cpp.js  _cmd_line_8h.js  _cmd_line_interface_8h_source.html  _cmd_line_output_8h_source.html  _constraint_8h.html  _doc_book_output_8h.html  _doc_book_output_8h_source.html  _i_n_i_8h.html  _ignore_rest_visitor_8h.html  (+5501 more)
ext/: INI.h  ini.hpp  md5.hpp
inc/: AFileReader.hpp  AHashMapTrie.hpp  ALayeredTrie.hpp  ARPAGramBuilder.hpp  ARPAGramBuilderFactory.hpp  ARPAGramBuilders.hpp  ARPANGramBuilder.hpp  ARPANGramBuilderFactory.hpp  ARPATrieBuilder.hpp  ATrie.hpp  AWordIndex.hpp  ArrayUtils.hpp  BaseMGram.hpp  BasicLogger.hpp  BasicTextFileReader.hpp  BasicTextPiece.hpp  BasicWordIndex.hpp  BitMGramId.hpp  BitmapHashCache.hpp  ByteMGramId.hpp  ByteMGramIdTables.hpp  C2DHashMapTrie.hpp  C2DHybridTrie.hpp  C2DMapArrayTrie.hpp  C2DMapTrie.hpp  C2WArrayTrie.hpp  C2WHybridMemoryTrie.hpp  C2WOrderedArrayTrie.hpp  CStyleFileReader.hpp  CompMGramId.hpp  Configuration.hpp  ContextMultiHashMapTrie.hpp  CountingWordIndex.hpp  CtxMultiHashMapTrie.hpp  DynamicMemoryArrays.hpp  Exceptions.hpp  Executor.hpp  FileStreamReader.hpp  FixedMemoryAllocator.hpp  FixedMemoryStorage.hpp  (+55 more)
nbproject/: Makefile-Debug.mk  Makefile-Debug__Centos_.mk  Makefile-Debug__Linux_.mk  Makefile-Debug__MacOs_.mk  Makefile-Profile__Centos_.mk  Makefile-Profile__MacOs_.mk  Makefile-Release-MacOs.mk  Makefile-Release.mk  Makefile-Release__Centos_.mk  Makefile-Release__Centos_gperf.mk  Makefile-Release__Centos_gperftools.mk  Makefile-Release__Linux_.mk  Makefile-Release__MacOs_.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Debug__Centos_.bash  Package-Debug__Linux_.bash  Package-Debug__MacOs_.bash  Package-Profile__Centos_.bash  Package-Profile__MacOs_.bash  Package-Release-MacOs.bash  Package-Release.bash  Package-Release__Centos_.bash  Package-Release__Centos_gperf.bash  Package-Release__Centos_gperftools.bash  Package-Release__Linux_.bash  Package-Release__MacOs_.bash  configurations.xml  project.xml
script/: combine-lattices.sh  compute-bleu.sh  compute-blue  compute_bleu.sh
src/: ALayeredTrie.cpp  ARPAGramBuilder.cpp  ARPAGramBuilders.cpp  ARPANGramBuilder.cpp  ARPATrieBuilder.cpp  ATrie.cpp  AWordIndex.cpp  BasicLogger.cpp  BitMGramId.cpp  ByteMGramId.cpp  C2DHashMapTrie.cpp  C2DHybridTrie.cpp  C2DMapArrayTrie.cpp  C2DMapTrie.cpp  C2WArrayTrie.cpp  C2WHybridMemoryTrie.cpp  C2WOrderedArrayTrie.cpp  CompMGramId.cpp  ContextMultiHashMapTrie.cpp  CtxMultiHashMapTrie.cpp  G2DHashMapTrie.cpp  G2DMapTrie.cpp  H2DMapTrie.cpp  HashMapTrie.cpp  HybridMemoryTrie.cpp  LayeredTrieDriver.cpp  Logger.cpp  MGrams.cpp  MultiHashMapTrie.cpp  NGram.cpp  NGramBuilder.cpp  SingleHashMapTrie.cpp  StatisticsMonitor.cpp  TextNGramReader.cpp  TrieBuilder.cpp  W2CArrayTrie.cpp  W2CHybridMemoryTrie.cpp  W2CHybridTrie.cpp  W2COrderedArrayTrie.cpp  main.cpp
test-data/: basic.arpa  callgrind.out.17649  callgrind.out.27092  core  diff_tries.sh  e_1000.lm  input.txt  performance.txt  test.txt  test_basic_arpa.txt  train.txt
(+14023 files in other folders)
